--- a/src/components/PasswordBody.css
+++ b/src/components/PasswordBody.css
@@ -3,4 +3,6 @@
     height: 528px;
     flex-shrink: 0;
     background: var(--Dark-Grey, #24232C);
+    display: flex;
+    flex-direction: column;
 }
