--- a/src/components/RangeSlider.css
+++ b/src/components/RangeSlider.css
@@ -5,6 +5,7 @@
 
 .rangeSlider input[type="range"] {
     -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 8px;
     background: var(--Very-Dark-Grey, #18171F);
