finished the layout

--- a/src/components/PasswordBody.css
+++ b/src/components/PasswordBody.css
@@ -6,3 +6,42 @@
     display: flex;
     flex-direction: column;
 }
+
+.PasswordBody .forms {
+    padding: 24px 32px 0px 32px;
+}
+
+.PasswordBody .buttonContainer {
+    cursor: pointer;
+    background: var(--Neon-Green, #A4FFAF);
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 24px 32px 0px 32px;
+}
+
+.PasswordBody .buttonContainer .image {
+    fill: var(--Neon-Green, #A4FFAF) !important;
+    z-index: 100;
+    background-color: var(--Neon-Green, #A4FFAF);
+}
+
+.PasswordBody .buttonContainer:hover {
+    border: 1px solid var(--Neon-Green, #A4FFAF);
+    height: 65px;
+    background-color: var(--Dark-Grey, #24232C);
+}
+
+.PasswordBody .buttonContainer .buttonText {
+    color: var(--Dark-Grey, #24232C);
+    font-feature-settings: 'clig' off, 'liga' off;
+
+    /* Body (M) */
+    font-family: JetBrains Mono;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-right: 24px;
+}
