--- a/src/components/PasswordBody.css
+++ b/src/components/PasswordBody.css
@@ -22,8 +22,7 @@
 }
 
 .PasswordBody .buttonContainer .image {
-    fill: var(--Neon-Green, #A4FFAF) !important;
-    z-index: 100;
+    fill: var(--Neon-Green, #A4FFAF);
     background-color: var(--Neon-Green, #A4FFAF);
 }
 
