made copy to clipboard to work

--- a/src/components/PasswordHeader.css
+++ b/src/components/PasswordHeader.css
@@ -22,9 +22,28 @@
     padding: 19px 0px 19px 32px;
 }
 
-.PasswordHeader .copyIcon {
+.PasswordHeader .copyContainer {
+    display: flex;
+    align-items: center;
+}
+
+.PasswordHeader .copyContainer .copyText {
+    color: var(--Neon-Green, #A4FFAF);
+    font-feature-settings: 'clig' off, 'liga' off;
+
+    /* Body (M) */
+    font-family: JetBrains Mono;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-right: 10px;
+}
+
+.PasswordHeader .copyContainer .copyIcon {
     width: 21px;
     height: 24px;
     flex-shrink: 0;
     padding: 28px 32px 28px 0px;
+    cursor: pointer;
 }
