made the site responsive

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@
   line-height: normal;
   margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .App .title {
+    font-size: 16px;
+  }
+}
