--- a/src/components/CharacterLength.css
+++ b/src/components/CharacterLength.css
@@ -28,3 +28,13 @@
     font-weight: 700;
     line-height: normal;
 }
+
+@media only screen and (max-width: 600px) {
+    .textStyle {
+        font-size: 16px;
+    }
+
+    .numberStyle {
+        font-size: 24px;
+    }
+}
