--- a/src/components/Condition.css
+++ b/src/components/Condition.css
@@ -17,3 +17,9 @@
     line-height: normal;
     padding-left: 24px;
 }
+
+@media only screen and (max-width: 600px) {
+    .conditionContainer .condition {
+        font-size: 16px;
+    }
+}
