--- a/src/components/DifficultyBar.css
+++ b/src/components/DifficultyBar.css
@@ -57,3 +57,38 @@
 .difficultyBarContainer .difficultyBarBox .difficulty .difficultyText {
     margin-right: 7.5px;
 }
+
+@media only screen and (max-width: 600px) {
+    .difficultyBarContainer .difficultyBarBox {
+        /* width: 311px; */
+        height: 56px;
+        flex-shrink: 0;
+    }
+
+    .difficultyBarContainer .difficultyBarBox .strength {
+        padding-left: 10px;
+    }
+
+    .difficultyBarContainer .difficultyBarBox .difficulty {
+        padding-right: 10px;
+    }
+
+    .difficultyBarContainer .difficultyBarBox .difficulty .difficultyText {
+        margin-right: 5px;
+    }
+
+    .difficultyBarContainer .difficultyBarBox .textStyle {
+        font-size: 16px;
+    }
+
+    .difficultyBarContainer .difficultyBarBox .difficulty .square {
+        width: 8px;
+        height: 20px;
+        flex-shrink: 0;
+        margin-left: 5px;
+    }
+
+    .difficultyBarContainer .difficultyBarBox .difficulty .difficultyText {
+        font-size: 16px;
+    }
+}
