--- a/src/components/PasswordBody.css
+++ b/src/components/PasswordBody.css
@@ -44,3 +44,11 @@
     line-height: normal;
     margin-right: 24px;
 }
+
+@media only screen and (max-width: 600px) {
+    .PasswordBody {
+        width: 343px;
+        height: 528px;
+        flex-shrink: 0;
+    }
+}
