--- a/src/components/PasswordHeader.css
+++ b/src/components/PasswordHeader.css
@@ -44,6 +44,25 @@
     width: 21px;
     height: 24px;
     flex-shrink: 0;
-    padding: 28px 32px 28px 0px;
+    /* padding: 28px 32px 28px 0px; */
+    margin-right: 32px;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+    .PasswordHeader {
+        width: 343px;
+        height: 64px;
+        flex-shrink: 0;
+    }
+
+    .PasswordHeader .password {
+        font-size: 20px;
+        padding: 17px 0px 15px 16px;
+    }
+
+    .PasswordHeader .copyContainer .copyText {
+        font-size: 16px;
+        margin-right: 10px;
+    }
 }
