--- a/src/components/PasswordBody.css
+++ b/src/components/PasswordBody.css
@@ -51,4 +51,10 @@
         height: 528px;
         flex-shrink: 0;
     }
+
+    .PasswordBody .buttonContainer:hover {
+        border: 1px solid var(--Neon-Green, #A4FFAF);
+        height: 65px;
+        background-color: var(--Dark-Grey, #24232C);
+    }
 }
